feat: get endpoint id from MESSAGE_RECEIVED
Apps need to know which endpoint is a recipient
to accurately understand what to do with the
message further
